# GatorDB

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: executer.cpp  executer.h
src/catalog/: catalog.cpp  catalog.h
src/common/: config.h  rid.h  statement.cpp  statement.h
src/storage/: catalog.cpp  catalog.h  disk_manager.cpp  disk_manager.h  pager.cpp  pager.h  schema.cpp  schema.h  storage_utils.cpp  storage_utils.h  table_page.cpp  table_page.h  tuple.cpp  tuple.h
